<resources>
    <string name="app_name">GuiaSW</string>
    <string name="Menu">Menu</string>

    <string name="FarmsdeMana">Farms de Mana</string>
    <string name="FarmsdeRunas">Farms de Runas</string>
    <string name="FarmsdeEssencias">Farms de Essências</string>
    <string name="FarmsdeExp">Farms de EXP</string>

    <!-- LB -->
    <string name="lbHP">HP:</string>
    <string name="lbATK">ATK:</string>
    <string name="lbDEF">DEF:</string>
    <string name="lbVEL">VEL:</string>
    <string name="lbCRIRate">CRI Rate:</string>
    <string name="lbCRIDmg">CRI Dmg:</string>
    <string name="lbRES">RES:</string>
    <string name="lbPRE">PRE:</string>
    <string name="lbTipoRuna">Tipo Runa:</string>


</resources>
