<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#3c3f41"
                android:layout_marginTop="10dp"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_margin="3dp"
                android:background="@drawable/shape_monsters_bg">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivImagem"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbHP"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvVida"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbATK"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvAtaque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbDEF"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvDefesa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbVEL"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvVelocidade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal"
                        >

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbCRIRate"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvChanceCrit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbCRIDmg"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvCriticalDmg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbRES"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvResistencia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbPRE"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvPrecisao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>