<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:padding="5dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_monsters_bg"
                android:gravity="center">

                <ImageView
                    android:id="@+id/boardRuna"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/runas"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_gravity="center"/>

                <ImageView
                    android:id="@+id/ivRuna1"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa1"
                    android:scaleType="fitXY"
                    android:layout_marginLeft="63dp"
                    android:layout_marginTop="10dp"
                    android:layout_alignLeft="@+id/boardRuna"/>

                <ImageView
                    android:id="@+id/ivRuna2"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa2"
                    android:scaleType="fitXY"
                    android:layout_alignRight="@+id/boardRuna"
                    android:layout_marginTop="45dp"
                    android:layout_marginRight="11dp"/>

                <ImageView
                    android:id="@+id/ivRuna3"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa3"
                    android:scaleType="fitXY"
                    android:layout_alignRight="@+id/boardRuna"
                    android:layout_alignBottom="@id/boardRuna"
                    android:layout_marginBottom="44dp"
                    android:layout_marginRight="11dp"/>

                <ImageView
                    android:id="@+id/ivRuna4"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa4"
                    android:scaleType="fitXY"
                    android:layout_alignBottom="@id/boardRuna"
                    android:layout_marginLeft="65dp"
                    android:layout_marginBottom="6dp"/>

                <ImageView
                    android:id="@+id/ivRuna5"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa5"
                    android:scaleType="fitXY"
                    android:layout_alignBottom="@id/boardRuna"
                    android:layout_marginBottom="43dp"
                    android:layout_marginLeft="5dp"/>

                <ImageView
                    android:id="@+id/ivRuna6"
                    android:layout_width="90dp"
                    android:layout_height="106dp"
                    android:src="@drawable/runa6"
                    android:scaleType="fitXY"
                    android:layout_marginTop="44dp"
                    android:layout_marginLeft="8dp"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_monsters_bg">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ImageView
                        android:id="@+id/ivImagem"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:background="@drawable/shape_detalhe_monstro"/>
                    <TextView
                        android:id="@+id/tvNome"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="nome"
                        android:layout_gravity="center"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp"
                        android:layout_marginTop="5dp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbHP"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvVida"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvVidaRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbATK"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvAtaque"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvAtaqueRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbDEF"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvDefesa"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvDefesaRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbVEL"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvVelocidade"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvVelocidadeRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbCRIRate"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvChanceCrit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvChanceCritRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbCRIDmg"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvCriticalDmg"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvCriticalDmgRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbRES"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvResistencia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvResistenciaRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/lbPRE"
                            android:gravity="right"
                            android:textSize="16dp"
                            android:textStyle="bold"/>

                        <TextView
                            android:id="@+id/tvPrecisao"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ff3c27"
                            android:layout_marginLeft="5dp"/>

                        <TextView
                            android:id="@+id/tvPrecisaoRuna"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:textColor="#ffe627"
                            android:layout_marginLeft="5dp"/>

                    </LinearLayout>


                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>